[package]
name = "graphql"
version = "0.1.0"
authors = ["Chris Outhwaite <couthwaite@carrera.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_req  = {version="^0.7", default-features = false, features = ["rust-tls"]}
